# Parallel-SCC

./: .gitignore  CMakeLists.txt  PTarjanPCode.cpp  Readme.md  SCC_DYNAMIC.cpp  SCC_STATIC.cpp  buildO3.sh  compile_result.sh  gen.sh  test.sh
archive/04-03-2018/: SCC_MAIN_THREAD_DYNAMIC.cpp  SCC_REMOVED_PHASE3.cpp  SCC_SEM.cpp  SCC_WFPOOL.cpp  SCC_WFSCCQUEUE.cpp
archive/10-03-2018/: SCC_MAIN_THREAD_STATIC.cpp  SCC_MAIN_THREAD_STATIC_NQUEUE.cpp  SCC_STATIC_NXT.cpp  TEST.cpp  Tarjan2.cpp
include/: AtomicQueue.h
sandbox/: AtomicQueue.h  test.cpp
scripts/: Condenser.cpp  GG.cpp  GenerateGraph.cpp  GenerateGraph.go
src/: GenerateGraph.cpp  PTarjan.cpp  PTarjanExp.cpp  SCC.cpp  SCC_MAIN_THREAD.cpp  SCC_MAIN_THREAD_DYNAMIC.cpp  SCC_MAIN_THREAD_DYNAMIC_NQUEUE.cpp  SCC_MAIN_THREAD_STATIC.cpp  SCC_MAIN_THREAD_STATIC_NQUEUE.cpp  SCC_REMOVED_PHASE3.cpp  SCC_SEM.cpp  SCC_SEM_WFPOOL.cpp  SCC_STATIC_ASSIGNMENT.cpp  SCC_STATIC_NXT.cpp  SCC_WFPOOL.cpp  SCC_WFSCCQUEUE.cpp  TEST.cpp  Tarjan2.cpp
